--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,12 @@
 html {
   scroll-behavior: smooth;
 }
+
+::-webkit-scrollbar{
+  width: 10px;
+}
+::-webkit-scrollbar-thumb{
+  background:  linear-gradient(0deg, #7effb2 0%, #2cd9ff 100%);
+  border-radius: 10px;
+  border: 3.5px solid #111;
+}
