--- a/src/index.css
+++ b/src/index.css
@@ -9,35 +9,35 @@
 
   h1 {
     @apply sm:text-[18px] md:text-2xl lg:text-3xl xl:text-3xl 2xl:text-3xl text-transparent bg-clip-text 
-    bg-gradient-to-b from-primary to-secondary font-bold
+    bg-gradient-to-b from-primary to-secondary font-bold;
   }
 
   p {
-    @apply text-color
+    @apply text-color;
   }
 
   header {
-    @apply bg-backgroundPrimary select-none
+    @apply bg-backgroundPrimary select-none;
   }
 
   nav {
-    @apply bg-backgroundPrimary select-none
+    @apply bg-backgroundPrimary select-none;
   }
 
   img {
-    @apply select-none
+    @apply select-none;
   }
 
   li {
-    @apply list-none text-gray-400 font-medium
+    @apply list-none text-gray-400 font-medium;
   }
 
   li a {
-    @apply hover:text-transparent hover:bg-clip-text hover:bg-gradient-to-b from-primary to-secondary
+    @apply hover:text-transparent hover:bg-clip-text hover:bg-gradient-to-b from-primary to-secondary;
   }
 
   button {
-    @apply select-none
+    @apply select-none;
   }
 }
 
@@ -45,12 +45,12 @@ html {
   scroll-behavior: smooth;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: 10px;
 }
 
-::-webkit-scrollbar-thumb{
-  background:  linear-gradient(0deg, #0184fc 0%, #00e3eb 100%);
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(0deg, #0184fc 0%, #00e3eb 100%);
   border-radius: 10px;
   border: 3.5px solid #0c0c0c;
 }
