--- a/src/global.css
+++ b/src/global.css
@@ -45,10 +45,31 @@
   ::-webkit-scrollbar-thumb {
     @apply bg-primary rounded-2xl;
   }
+
+  progress::-webkit-progress-bar {
+    @apply bg-backgroundPrimaryLight dark:bg-backgroundPrimaryDark;
+  }
+
+  progress::-webkit-progress-value {
+    @apply bg-primary;
+  }
 }
 
 html {
   scroll-behavior: smooth;
+}
+
+progress {
+  position: fixed;
+  z-index: 90;
+  top: 0;
+  left: 0;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 8px;
+  border: none;
+  background: transparent;
 }
 
 .animation-scroll {
