--- a/src/global.css
+++ b/src/global.css
@@ -35,7 +35,7 @@
   }
 
   ::-webkit-scrollbar {
-    @apply w-[10px];
+    @apply w-1;
   }
 
   ::-webkit-scrollbar-thumb {
@@ -70,6 +70,21 @@ progress {
 
 ul li .active {
   color: #1d4ed8;
+  position: relative;
+  padding-bottom: 6px;
+}
+
+ul li .active::after {
+  content: "";
+  width: 85%;
+  height: 2px;
+  display: block;
+  background: #1d4ed8;
+  left: 40%;
+  transform: translateX(-40%);
+  position: absolute;
+  bottom: 0;
+  transition: all 0.2s ease-in-out;
 }
 
 ul li :not(.active) {
@@ -81,13 +96,15 @@ ul li :not(.active)::after {
   content: "";
   width: 0;
   height: 2px;
+  display: block;
   background: #1d4ed8;
+  left: 40%;
+  transform: translateX(-40%);
   position: absolute;
   bottom: 0;
-  left: 0px;
   transition: all 0.2s ease-in-out;
 }
 
 ul li :not(.active):hover::after {
-  width: 100%;
+  width: 85%;
 }
