--- a/src/global.css
+++ b/src/global.css
@@ -27,7 +27,7 @@
 
   header,
   nav {
-    @apply bg-backgroundPrimaryDark transition-all duration-300;
+    @apply bg-background transition-all duration-300;
   }
 
   li {
@@ -47,7 +47,7 @@
   }
 
   progress::-webkit-progress-bar {
-    @apply bg-backgroundPrimaryDark;
+    @apply bg-background;
   }
 
   progress::-webkit-progress-value {
