--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,40 +1,45 @@
-ul li .active {
+ul li a.active {
   color: #1d4ed8;
-  position: relative;
-  padding-bottom: 6px;
 }
 
-ul li .active::after {
-  content: "";
-  width: 85%;
-  height: 2px;
-  display: block;
-  background: #1d4ed8;
-  left: 40%;
-  transform: translateX(-40%);
-  position: absolute;
-  bottom: 0;
-  transition: all 0.2s ease-in-out;
-}
+@media (min-width: 768px) {
+  ul li a.active {
+    position: relative;
+    padding-bottom: 6px;
+  }
 
-ul li :not(.active) {
-  position: relative;
-  padding-bottom: 6px;
-}
+  ul li a.active::after {
+    content: "";
+    width: 85%;
+    height: 2px;
+    display: block;
+    background: #1d4ed8;
+    left: 40%;
+    transform: translateX(-40%);
+    position: absolute;
+    bottom: 0;
+    transition: all 0.2s ease-in-out;
+  }
 
-ul li :not(.active)::after {
-  content: "";
-  width: 0;
-  height: 2px;
-  display: block;
-  background: #1d4ed8;
-  left: 40%;
-  transform: translateX(-40%);
-  position: absolute;
-  bottom: 0;
-  transition: all 0.2s ease-in-out;
-}
+  ul li a:not(.active) {
+    position: relative;
+    padding-bottom: 6px;
+  }
 
-ul li :not(.active):hover::after {
-  width: 85%;
+  ul li a:not(.active)::after {
+    content: "";
+    width: 0;
+    height: 2px;
+    display: block;
+    background: #1d4ed8;
+    left: 40%;
+    transform: translateX(-40%);
+    position: absolute;
+    bottom: 0;
+    transition: all 0.2s ease-in-out;
+  }
+
+  ul li a:not(.active):hover::after {
+    width: 85%;
+  }
 }
