--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,4 +53,8 @@
   progress::-webkit-progress-value {
     @apply bg-primary;
   }
+
+  ::selection {
+    @apply bg-primary text-tertiary;
+  }
 }
