--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
   }
 
   body {
-    @apply font-poppins outline-none;
+    @apply font-poppins bg-background outline-none;
   }
 
   h1 {
@@ -55,6 +55,6 @@
   }
 
   ::selection {
-    @apply bg-primary text-tertiary;
+    @apply bg-primary text-secondary;
   }
 }
