--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,5 +1,5 @@
 ul li a.active {
-  color: #1d4ed8;
+  color: #fff;
 }
 
 @media (min-width: 768px) {
@@ -10,12 +10,12 @@ ul li a.active {
 
   ul li a.active::after {
     content: "";
-    width: 85%;
-    height: 2px;
+    width: 50%;
+    height: 1px;
     display: block;
-    background: #1d4ed8;
+    background: #fff;
     left: 40%;
-    transform: translateX(-40%);
+    transform: translateX(-30%);
     position: absolute;
     bottom: 0;
     transition: all 0.2s ease-in-out;
@@ -29,17 +29,17 @@ ul li a.active {
   ul li a:not(.active)::after {
     content: "";
     width: 0;
-    height: 2px;
+    height: 1px;
     display: block;
-    background: #1d4ed8;
+    background: #fff;
     left: 40%;
-    transform: translateX(-40%);
+    transform: translateX(-30%);
     position: absolute;
     bottom: 0;
     transition: all 0.2s ease-in-out;
   }
 
   ul li a:not(.active):hover::after {
-    width: 85%;
+    width: 50%;
   }
 }
