--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,14 +23,16 @@
         @apply font-medium;
     }
 
-    header,
-    nav,
-    img {
+    :is(header, nav, img) {
         @apply select-none;
     }
 
     li {
         @apply list-none font-semibold;
+    }
+
+    .active {
+        @apply relative pb-1.5 text-primary after:content-[''] md:after:w-[50%] after:h-[1px] after:block after:bg-primary after:left-[40%] after:-translate-x-[30%] after:absolute after:bottom-0 duration-300;
     }
 
     button {
