--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,8 +7,20 @@
         @apply scroll-smooth;
     }
 
+    ::-webkit-scrollbar {
+        @apply w-0.5;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        @apply bg-neutral-500 rounded-2xl;
+    }
+
+    ::selection {
+        @apply text-primary bg-neutral-800/60;
+    }
+
     body {
-        @apply font-poppins bg-background outline-none;
+        @apply font-poppins bg-background outline-none cursor-none;
     }
 
     main {
@@ -23,23 +35,19 @@
         @apply font-medium;
     }
 
-    :is(header, nav, img, a, button) {
-        @apply select-none;
+    :is(header, nav, img, a, button, input, label, textarea) {
+        @apply select-none cursor-none;
     }
 
     li {
         @apply list-none font-semibold;
     }
 
-    ::-webkit-scrollbar {
-        @apply w-0.5;
+    .cursor {
+        @apply fixed border-2 border-neutral-700 rounded-[50%] mix-blend-screen pointer-events-none -translate-x-[50%] -translate-y-[50%] z-[999999] backdrop-blur-[1px] bg-background cursor-none ease-in-out transition-multiple;
     }
 
-    ::-webkit-scrollbar-thumb {
-        @apply bg-neutral-500 rounded-2xl;
-    }
-
-    ::selection {
-        @apply text-primary bg-neutral-800/60;
+    .cursor.pointer {
+        @apply hidden opacity-0 ease-in-out transition-multiple;
     }
 }
