--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,11 +12,11 @@
   }
 
   ::-webkit-scrollbar-thumb {
-    @apply bg-neutral-500 rounded-2xl;
+    @apply rounded-2xl bg-neutral-500;
   }
 
   ::selection {
-    @apply text-emerald-300 bg-emerald-300/10;
+    @apply bg-emerald-300/10 text-emerald-300;
   }
 
   h1 {
@@ -33,5 +33,5 @@
 }
 
 body {
-	-webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: transparent;
 }
